k8s-yaml/prd-ns/services/frontend-cip-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-web-cip-service
spec:
  type: ClusterIP
  selector:
    component: frontend-web
  ports:
    - port: 80
      targetPort: 80
