k8s-yaml/prd-ns/services/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - prd.potentialpark.com
      secretName: prd-potentialpark-com
  rules:
    - host: prd.potentialpark.com
      http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: gateway-cip-service
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: frontend-web-cip-service
              servicePort: 80
